<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginTop="@dimen/dp_50"
    android:padding="@dimen/size_10"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/size_20"
        android:padding="@dimen/dp_50"
        android:text="@string/title_login"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        />

    <EditText
        android:id="@+id/edt_username"
        android:textSize="@dimen/size_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        />
    <EditText
        android:id="@+id/edt_password"
        android:textSize="@dimen/size_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"

        />

    <Button
        android:id="@+id/btn_ok"
        android:textSize="@dimen/size_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"

        />
    <Button
        android:id="@+id/btn_register"
        android:textSize="@dimen/size_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_register"

        />






</LinearLayout>